[gd_scene load_steps=5 format=3 uid="uid://ou51co1kchv0"]

[ext_resource type="Texture2D" uid="uid://bclgqhr5fw8sy" path="res://assets/enemies/tank_blue.png" id="1_ej26b"]
[ext_resource type="Script" path="res://scenes/enemies/blue_tank.gd" id="1_le0m0"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="2_2qsew"]

[sub_resource type="CircleShape2D" id="CircleShape2D_54c5d"]
radius = 24.0

[node name="BlueTank" type="PathFollow2D"]
cubic_interp = false
loop = false
script = ExtResource("1_le0m0")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_2qsew")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
scale = Vector2(2.4, 2.4)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ej26b")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_54c5d")
debug_color = Color(0.888855, 0.236376, 0.574171, 0.42)

[connection signal="on_hit" from="HealthComponent" to="." method="_on_hit"]
[connection signal="on_hp_zero" from="HealthComponent" to="." method="_on_hp_zero"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
